5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3119/executions/1594_2425.log
== TEST (2019-03-21 17:32:18) 
-- CODE:
d = float(input("Distancia percorrida: "))
c = float(input("Combustivel gasto: "))

media = a/c

print(media)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    media = a/c
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:32:31) 
-- CODE:
d = float(input("Distancia percorrida: "))
c = float(input("Combustivel gasto: "))

media = d/c

print(media)

-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 17:32:49) 
-- CODE:
d = float(input("Distancia percorrida: "))
c = float(input("Combustivel gasto: "))

media = d/c

print(round(media,3))

-- EXECUTION TIME:
0.183236
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:33:11) 
-- CODE:
d = float(input("Distancia percorrida: "))
c = float(input("Combustivel gasto: "))

media = d/c

print(round(media,3)"km/l")

-- ERROR:
File "XXXX", line 6
    print(round(media,3)"km/l")
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:33:16) 
-- CODE:
d = float(input("Distancia percorrida: "))
c = float(input("Combustivel gasto: "))

media = d/c

print(round(media,3),"km/l")

-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 17:33:24) 
-- CODE:
d = float(input("Distancia percorrida: "))
c = float(input("Combustivel gasto: "))

media = d/c

print(round(media,3),"km/l")

-- EXECUTION TIME:
0.158205
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
